# reqman4

./: README.md  aeff.py  build.py  conftest.py  get.py  main.py  pyproject.toml  scenario.yml  schema.json  test_Test.py  test_comm.py  test_common.py  test_compat.py  test_config.py  test_cookies.py  test_coverage.py  test_ehttp.py  test_env.py  test_examples.py  test_helpers.py  test_html_report.py  test_main.py  test_main_cov.py  test_main_entrypoint.py  test_pycode.py  test_scenario.py  test_switch.py  test_switch_combinations.py  validate.py
.github/workflows/: publish_on_pypi.yml  tests.yml
examples/: err.yml  httpbin_scenario.yml  jsonplaceholder_scenario.yml  real.yml  reqman.conf  simple.yml  test1.yml  test_switch.yml
examples/classic/: README.md  reqman.conf  reqman.yml  test_switch.yml
examples/err/: README.md  bad_call.yml  bad_call_attributes.yml  bad_call_attributes2.yml  bad_call_type.yml  bad_dict.yml  bad_dict2.yml  bad_pymethod_compile.yml  bad_pymethod_compile2.yml  bad_run_type.yml  bad_step.yml  bad_step2.yml  bad_syntax.yml  bad_tests.yml  bad_yaml.yml  call_resolv_bad2_params.yml  call_resolv_bad_params.yml  call_resolv_unknown_params.yml  call_unknown_RUN_scenar.yml  http_bad_step.yml  http_resolv_bad2_params.yml  http_resolv_bad_params.yml  http_resolv_unknown_params.yml  no_run.yml  resolv_body.yml  resolv_headers.yml  resolv_url.yml  set_bad_attributes.yml  (+1 more)
libs/: comm.py  config.py
src/: __init__.py  common.py  compat.py  config.py  ehttp.py  env.py  exceptions.py  main.py  output.py  pycode.py  request.py  scenario.py  tool.py
(+70 files in other folders)
