[project]
name = "rq4"
version = "0.1.0"
description = "rq = reqman4 (prototype)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "colorama>=0.4.6",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
]

[tool.uv]
package = true

[project.scripts]
rq = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]
